--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -946,7 +946,8 @@ h6 {
   align-items: center;
 }
 .greenchop-title h1 {
-  margin-left: 200px;
+  width: 1200px;
+  margin: 0 auto;
   font-size: 4.3rem;
   font-weight: 700;
 }
@@ -956,7 +957,7 @@ h6 {
     justify-content: center;
   }
   .greenchop-title h1 {
-    margin-left: 0;
+    text-align: center;
   }
 }
 @media screen and (max-width: 991.98px) {
@@ -1247,10 +1248,10 @@ h6 {
   height: 166.667px;
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
 }
 .products-title h1 {
-  margin-left: 200px;
+  width: 1200px;
+  margin: 0 auto;
   font-size: 4.3rem;
   font-weight: 700;
 }
@@ -1260,7 +1261,7 @@ h6 {
     justify-content: center;
   }
   .products-title h1 {
-    margin-left: 0;
+    text-align: center;
   }
 }
 @media screen and (max-width: 991.98px) {
@@ -1632,7 +1633,8 @@ h6 {
   align-items: center;
 }
 .news-title h1 {
-  margin-left: 200px;
+  width: 1200px;
+  margin: 0 auto;
   font-size: 4.3rem;
   font-weight: 700;
 }
@@ -1642,7 +1644,7 @@ h6 {
     justify-content: center;
   }
   .news-title h1 {
-    margin-left: 0;
+    text-align: center;
   }
 }
 @media screen and (max-width: 991.98px) {
