--- a/du_an_HTML/scss/pages/news/_news-title.scss
+++ b/du_an_HTML/scss/pages/news/_news-title.scss
@@ -5,7 +5,8 @@
     display: flex;
     align-items: center;
     h1 {
-        margin-left: 200px;
+        width: 1200px;
+        margin: 0 auto;
         font-size: 4.3rem;
         font-weight: 700;
     }
@@ -15,7 +16,7 @@
     .news-title {
         justify-content: center;
         h1 {
-            margin-left: 0;
+            text-align: center;
         }
     }
 }
