--- a/du_an_HTML/scss/pages/products/_products-title.scss
+++ b/du_an_HTML/scss/pages/products/_products-title.scss
@@ -4,9 +4,9 @@
     height: 166.667px;
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
     h1 {
-        margin-left: 200px;
+        width: 1200px;
+        margin: 0 auto;
         font-size: 4.3rem;
         font-weight: 700;
     }
@@ -16,7 +16,7 @@
     .products-title {
         justify-content: center;
         h1 {
-            margin-left: 0;
+            text-align: center;
         }
     }
 }
